- fix #184 - Wot/ last registration were not displsayed, when an user has more than ONE membership doc - Join: more precise message (too long, too short value)

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1182,7 +1182,7 @@ $ionicon-var-badge-editable: $ionicon-var-edit + "\00a0";
    Help Tip
 **********/
 .popover-helptip {
-  background-color:rgba(68, 68, 68, 0.85);
+  background-color:rgba(68, 68, 68, 0.85) !important;
   height: auto !important;
 }
 
